fix: valign select for paginator

--- a/src/ui/Common/Paginator/Paginator.module.css
+++ b/src/ui/Common/Paginator/Paginator.module.css
@@ -7,5 +7,5 @@
 }
 
 .select {
-    padding-top: 20px;
+    padding-top: 5px;
 }
